2005-12-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (edit_syntax_error): added support for
	automatically reopening the editor if the file had a syntax error
	in it.  Thanks to scottt who provided the patch at:
	http://www.scipy.net/roundup/ipython/issue36 (slightly modified
	version committed).

	* IPython/iplib.py (handle_normal): add suport for multi-line
	input with emtpy lines.  This fixes
	http://www.scipy.net/roundup/ipython/issue43 and a similar
	discussion on the user list.

	WARNING: a behavior change is necessarily introduced to support
	blank lines: now a single blank line with whitespace does NOT
	break the input loop, which means that when autoindent is on, by
	default hitting return on the next (indented) line does NOT exit.

	Instead, to exit a multiline input you can either have:

	  - TWO whitespace lines (just hit return again), or
	  - a single whitespace line of a different length than provided
	by the autoindent (add or remove a space).

	* IPython/completer.py (MagicCompleter.__init__): new 'completer'
	module to better organize all readline-related functionality.
	I've deleted FlexCompleter and put all completion clases here.

	* IPython/iplib.py (raw_input): improve indentation management.
	It is now possible to paste indented code with autoindent on, and
	the code is interpreted correctly (though it still looks bad on
	screen, due to the line-oriented nature of ipython).
	(MagicCompleter.complete): change behavior so that a TAB key on an
	otherwise empty line actually inserts a tab, instead of completing
	on the entire global namespace.  This makes it easier to use the
	TAB key for indentation.  After a request by Hans Meine
	<hans_meine-AT-gmx.net>
	(_prefilter): add support so that typing plain 'exit' or 'quit'
	does a sensible thing.  Originally I tried to deviate as little as
	possible from the default python behavior, but even that one may
	change in this direction (thread on python-dev to that effect).